# Omni-Parser

./: .env.example  .gitignore  README-zh.md  README.md  config.yaml  pyproject.toml  reparse_empty.py  reparse_noapi.py
omniparser/: __init__.py  batch_convert.py  cache.py  cli.py  config.py  mcp_server.py  models.py  pipeline.py  utils.py
omniparser/parsers/: __init__.py  base.py  docx_parser.py  image_describer.py  image_parser.py  pdf_parser.py  pptx_parser.py  xlsx_csv_converter.py  xlsx_parser.py
omniparser/postprocessors/: __init__.py  chunker.py  metadata.py
tests/: test_core.py
